--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,16 +1,15 @@
 ---
-import { getLangFromUrl, useTranslatedPath, useTranslations } from '../../i18n/utils';
-import type { Project, ProjectWithLang } from '../../types';
-import { filterProjects } from '../../utils';
-import { ProjectsList, Typography } from '../index.astro';
+import {
+  getLangFromUrl,
+  useTranslatedPath,
+  useTranslations,
+} from "../../i18n/utils";
+import type { Project } from "../../types";
+import { ProjectsList, Typography } from "../index.astro";
 
-const PROJECTS_LIMIT = 4;
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 const translatePath = useTranslatedPath(lang);
-
-// const projects: ProjectWithLang[] = await Astro.glob('../../content/projects/*.mdx');
-// const projectList = await filterProjects({ projects, lang, limit: PROJECTS_LIMIT });
 
 const projects = await Astro.glob("../../content/projects/**/*.mdx");
 const projectList: Project[] = projects
@@ -29,24 +28,28 @@ const projectList: Project[] = projects
       Content,
     })
   );
-
-
-
 ---
 
 <section
-  class='flex items-center justify-center px-5 py-14 md:py-40 bg-white dark:bg-dark relative z-10'
+  class="flex items-center justify-center px-5 py-14 md:py-40 bg-white dark:bg-dark relative z-10"
 >
-  <div class='container'>
-    <div class='flex justify-between items-center flex-wrap gap-6 mb-12 md:mb-20'>
-      <Typography type='h3' class='dark:text-white max-w-4xl leading-tight text-balance'>
-        {t('home.projects.title')}
+  <div class="container">
+    <div
+      class="flex justify-between items-center flex-wrap gap-6 mb-12 md:mb-20"
+    >
+      <Typography
+        type="h3"
+        class="dark:text-white max-w-4xl leading-tight text-balance"
+      >
+        {t("home.projects.title")}
       </Typography>
       <Typography
-        type='h5'
-        class='transition-colors dark:text-white/60 dark:hover:text-white/70 text-dark/60 hover:text-dark/70 ml-auto'
+        type="h5"
+        class="transition-colors dark:text-white/60 dark:hover:text-white/70 text-dark/60 hover:text-dark/70 ml-auto"
       >
-        <a href={translatePath('/projects')} class='text-inherit'>{t('home.projects.seeAll')}</a>
+        <a href={translatePath("/projects")} class="text-inherit"
+          >{t("home.projects.seeAll")}</a
+        >
       </Typography>
     </div>
     <ProjectsList projects={projectList} />
