--- a/src/components/sections/ProjectDetail.astro
+++ b/src/components/sections/ProjectDetail.astro
@@ -1,21 +1,17 @@
 ---
-import { Image } from 'astro:assets';
-import { PROJECTS_CONTENT } from '../../content/projects/content/index.astro';
+import { Image } from "astro:assets";
 
-const { project, lang = 'en' } = Astro.props;
+const { project } = Astro.props;
 const { images, title, name, Content } = project || {};
-
-// const projectContent = PROJECTS_CONTENT[name] || {};
-// const Content = projectContent[lang] || null;
 ---
 
-<section class='flex items-center justify-center px-5 py-14 md:pb-40'>
-  <div class='container'>
-    <div class='relative mb-16'>
+<section class="flex items-center justify-center px-5 py-14 md:pb-40">
+  <div class="container">
+    <div class="relative mb-16">
       <Image
         src={images.large}
         alt={title}
-        class='w-full h-full object-cover rounded-4xl'
+        class="w-full h-full object-cover rounded-4xl"
         transition:name={`project-image-${name}`}
         width={1920}
         height={1080}
@@ -23,7 +19,7 @@ const { images, title, name, Content } = project || {};
     </div>
     {
       Content && (
-        <div class='content'>
+        <div class="content">
           <Content />
         </div>
       )
