fix: some changes

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -9,7 +9,7 @@ import {
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout title='Israel Larrondo | Portfolio'>
+<Layout title='Israel Larrondo | Portafolio'>
   <SectionHero />
   <SectionAbout />
   <SectionExperience />
