--- a/src/pages/es/projects/index.astro
+++ b/src/pages/es/projects/index.astro
@@ -24,7 +24,7 @@ const breadcrumbs = [
 ];
 ---
 
-<Layout title='Israel Larrondo | Projects'>
+<Layout title='Israel Larrondo | Proyectos'>
   <div class='bg-white dark:bg-dark relative z-10'>
     <HeaderPage title={t('projects.title')} {breadcrumbs} />
     <SectionAllProjects />
