--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ SectionAbout,
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title='Israel Larrondo | Portafolio'>
+<Layout title='Israel Larrondo | Portfolio'>
   <SectionHero />
   <SectionAbout />
   <SectionExperience />
