--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -6,7 +6,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<footer class='sticky bottom-0 z-0'>
+<footer class='sticky bottom-0 z-0 mt-auto'>
   <div class='bg-primary-500 dark:bg-primary-300 rounded-t-4xl md:rounded-t-main p-7 md:p-14'>
     <div class='container mx-auto'>
       <div class='grid md:grid-cols-12 gap-6'>
