--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const lang = getLangFromUrl(Astro.url);
     <ViewTransitions />
   </head>
 
-  <body class='bg-white dark:bg-dark'>
+  <body class='bg-white dark:bg-dark flex flex-col min-h-screen'>
     <Header />
     <slot />
     <Footer />
