--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -25,10 +25,9 @@ const translatePath = useTranslatedPath(lang);
     class="container relative flex flex-col gap-12 justify-center items-center text-center mx-auto h-screen"
   >
     <Magnet client:only
-      ><Typography
-        type="h1"
-        class="font-black text-[clamp(2.8rem,20vw,14rem)] text-white mb-24 cursor-default"
-        >{t("404.title")}</Typography
+      ><h1
+        class="font-black text-[clamp(2.8rem,20vw,14rem)] text-white mb-24 cursor-default leading-[0.75em]"
+        >{t("404.title")}</h1
       ></Magnet
     >
     <Typography type="p" class="highlight text-white"
