--- a/src/components/core/Button/index.astro
+++ b/src/components/core/Button/index.astro
@@ -10,6 +10,8 @@ interface Props {
   disabled?: boolean;
   href?: string;
   type?: 'button' | 'submit' | 'reset' | undefined | null;
+  target?: '_blank' | '_self' | '_parent' | '_top';
+  rel?: string;
 }
 
 export type ButtonProps = Props;
